# gmfsk-0.8.test1-jcb

./: ChangeLog  Makefile.in  TODO  aclocal.m4  config.h.in  configure  configure.in  gmfsk.bak.glade  gmfsk.glade  gmfsk.spec  gmfsk.spec.in
help/: Makefile.in
help/gmfsk/: Makefile.in
help/gmfsk/C/: Makefile.in
m4/: Makefile.in
po/: fi.gmo  fi.po  gmfsk.pot  pt.gmo  pt.po  sk.gmo  sk.po
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  conf.c  conf.h  confdialog.c  gmfsk_send.c  gtkdial.c  hamlib.c  interface.c  interface.h  macro.c  macro.h  main.c  main.h  picture.c  server.c  server.h  trx.c  trx.h  waterfall.h
src/cw/: Makefile.in
src/dominoex/: Makefile.am  Makefile.in  dominoex.c  dominoex.h  dominoexrx.c  dominoextx.c  varicode.c  varicode.h
src/feld/: Makefile.in
src/mfsk/: Makefile.in  mfsktx.c
src/misc/: Makefile.in  misc.h
src/mt63/: Makefile.in
src/olivia/: Makefile.in  olivia.cc
src/psk31/: Makefile.in  psk31.c
src/rtty/: Makefile.in
src/samplerate/: Makefile.in
src/throb/: Makefile.in
